@@ -3,11 +3,8 @@ import java.util.*;
 public class LongestMonthName {
     public static void main(String[] args) {
 
-List<String> months = Arrays.asList(
-    "January", "February", "March", "April",
-    "May", "June", "July", "August",
-    "September", "October", "November", "December"
-);
+ List<String> months = List.of("January", "February", "March", "April", "May", "September");
+
 
 String longest=" "; 
 for (String month : months) {
